--- a/index.html
+++ b/index.html
@@ -12,31 +12,42 @@
 	</head>
 	
 	<body>
-		<h1>Total Available Cash: $<span>20</span></h1>
-		<div class='apples'>
-			<img src='apple.png' alt='Apple graphic'>
-			<button class='apples'>Buy</button>
-			<p>Average Price: $<span>2.00</span></p>
+		<div class='container'>
+			<h1>Total Available Cash: $<span class= 'total-cash'>100</span></h1>
+			<div class='apples'>
+				<img src='apple.png' alt='Apple graphic'>
+				<button class='buy-button' data='101'>Buy</button>
+				<p>Average Price: $<span class='apples-average'>2.00</span></p>
+			</div>
+
+			<div class='oranges'>
+				<img src='orange.png' alt='Orange graphic'>
+				<button class='buy-button' data='102'>Buy</button>
+				<p>Average Price: $<span class='oranges-average'>2.00</span></p>
+			</div>	
+
+			<div class='bananas'>
+				<img src='bananas.png' alt='Banana graphic'>
+				<button class='buy-button' data='103'>Buy</button>
+				<p>Average Price: $<span class='bananas-average'>2.00</span></p>
+			</div>
+
+			<div class='pears'>
+				<img src='pear.png' alt='Pear graphic'>
+				<button class='buy-button' data='104'>Buy</button>
+				<p>Average Price: $<span class='pears-average'>2.00</span></p>
+			</div>
 		</div>
 
-		<div class='oranges'>
-			<img src='orange.png' alt='Orange graphic'>
-			<button class='oranges'>Buy</button>
-			<p>Average Price: $<span>2.00</span></p>
-		</div>	
+		<div class='current-price'>
+			<p>Apples - Current Price: $<span class='101'>5.00</span></p>
 
-		<div class='bananas'>
-			<img src='bananas.png' alt='Banana graphic'>
-			<button class='bananas'>Buy</button>
-			<p>Average Price: $<span>2.00</span></p>
+			<p>Orangees - Current Price: $<span class='102'>5.00</span></p>		
+			
+			<p>Bananas - Current Price: $<span class='103'>5.00</span></p>
+
+			<p>Pears - Current Price: $<span class='104'>5.00</span></p>	
 		</div>
-
-		<div class='pears'>
-			<img src='pear.png' alt='Pear graphic'>
-			<button class='pears'>Buy</button>
-			<p>Average Price: $<span>2.00</span></p>
-		</div>
-
 		
 	</body>
 </html>
